 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Apache HCatalog Change Log

Trunk (unreleased changes)

  INCOMPATIBLE CHANGES

  NEW FEATURES
  HCAT-328 HCatLoader should report its input size so pig can estimate the number of reducers (traviscrawford via gates)

  IMPROVEMENTS
  HCAT-414 More HCat e2e tests (khorgath via gates)

  HCAT-374 Add HCatBaseTest and one example usage (traviscrawford via gates)

  HCAT-390 Add e2e test for Hive with different file formats in different partitions (daijy via gates)

  HCAT-368 Documentation improvements: doc set & API docs (lefty via gates)

  HCAT-387 Trunk should point to 0.10 snapshot to match hive trunk (toffer)

  HCAT-329 HCatalog build fails with pig 0.9 (traviscrawford via hashutosh)

  HCAT-233 gitignore file (enis via gates)

  OPTIMIZATIONS

  BUG FIXES

  HCAT-410: support proxy user in hcat client (thejas via daijy)

  HCAT-406 The "toString" method in HCatFieldSchema class return only type information. (avandana)

  HCAT-421 Unit test failures in trunk build (avandana)

  HCAT-411 Incorrect example provided in the HCatalog documentation (Overview page) avandana

  HCAT-355 Include 1.1.0 version of hadoop as test dependency to fix random test failures in build (rohini via avandana)

  HCAT-409 MultiOutputformat should make getJobContext public (rohini via avandana)

  HCAT-403 MultiOutputFormat will call taskCommit on all formats if only one ever needs commit (rohini via avandana)

  HCAT-400 HCatalog build fails from git checkout due to missing lib directory (traviscrawford via gates)

Release 0.4.0 - Release May 16 2012

  INCOMPATIBLE CHANGES
  HCAT-304 Remove hcat.hbase.column.mapping table property (rohini via gates)

  HCAT-358 Remove externed hive code from HCat code and use maven instead (thw and gates via gates)

  HCAT-359 hcatalog tar.gz should only have hcatalog binaries (gkesavan via gates)
